overflow-X bug fixed

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
 }
 /*Hero*/
 .hero {
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	position: relative;
 }
@@ -104,7 +104,7 @@
 }
 /*Products*/
 .products {
-	width: 100vw;
+	width: 100%;
 	padding: 20px;
 	background: var(--color4);
 	box-sizing: border-box;
@@ -212,7 +212,7 @@
 }
 /*Newsletter*/
 .newsletter {
-	width: 100vw;
+	width: 100%;
 	height: 47vh;
 	padding: 2.82vh 4.59vw 2.12vh 4.59vw;
 	background: rgb(219,176,135);
@@ -269,7 +269,7 @@
 }
 .footer {
 	background: var(--color3);
-    width: 100vw;
+    width: 100%;
     padding: 15px;
     display: flex;
     flex-wrap: wrap;
